--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-redux": "^7.2.8",
-    "react-scripts": "5.0.1"
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "^2.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
